# limine-genconf

./: .gitignore  Cargo.toml  README.md
doc/texinfo/: loara-cfggen.texi
src/: main.rs
